@@ -1,0 +1,7 @@
+package test.listeners.issue2061;
+
+import org.testng.ITestListener;
+
+public class DynamicTestListener implements ITestListener {
+
+}
