@@ -1,0 +1,10 @@
+package test.listeners.issue2061;
+
+import org.testng.annotations.Test;
+
+public class TestClassSample extends ListenerEnabledBaseClass {
+
+  @Test
+  public void testMethod() {
+  }
+}
